<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_newspaper"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/title_newspaper" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_star"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message"
        android:title="@string/title_message" />
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/title_menu" />

</menu>